--- a/.drone.yml
+++ b/.drone.yml
@@ -6,7 +6,7 @@ platform:
   arch: amd64
 
 steps:
-- name: build-binary
+- name: build-binary-amd64
   image: golang:1.12.4
   environment:
     GO111MODULE: on
@@ -26,7 +26,7 @@ steps:
 
 ---
 kind: pipeline
-name: amd64
+name: arm64
 
 platform:
   os: linux
